--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,14 @@
   box-sizing: border-box;
 }
 
+/* .form-navigation{
+  background-color: #000;
+  flex: 1;
+  max-width: ;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+} */
 .navbar {
   max-width: 100%;
   height: 70px;
@@ -78,22 +86,24 @@
 
 .form-container {
   display: flex;
-  justify-content: space-around;
+  /* flex-wrap: wrap; */
+  justify-content:space-evenly;
   align-items: center;
   max-width: 100%;
   margin: 0 auto;
-  gap: 25px;
+  padding: 0 0.75rem;
   overflow: hidden;
   margin-top: 100px;
 }
 
 .sidebar {
   margin-top: 25px;
-  width: 30%;
+  width: 500px;
+  max-width:100%;
   min-width: 200px;
-  min-height: 600px;
-  /* background-color: #f7f7f7; */
-  padding: 40px 20px;
+  min-height: 650px;
+  background-color:#000;
+  padding: 40px;
   border-radius: 20px;
   background: linear-gradient(0deg, #34bc56, #010201 110%);
 }
@@ -143,20 +153,20 @@
 }
 
 .form-control {
-  /* position: relative; */
-  /* background-color: #343a40; */
-  padding: 20px;
-  min-width: 70%;
-  height: 500px;
-  flex: 1;
+  width: 700px;
+  padding-top: 30px;
+  height: 600px;
   display: flex;
   flex-direction: column;
   gap: 60px;
 }
 .form-field {
   display: flex;
-  align-items: center;
-  gap: 10%;
+  justify-content: space-between;
+  gap: 20px;
+}
+.form-field .form-group{
+flex: 1;
 }
 .form-heading h2 {
   font-size: 28px;
@@ -166,10 +176,11 @@
   font-size: 20px;
 }
 .form-input {
-  width: 100%;
+  width:100%;
+  height: 60px;
   padding: 10px;
   margin-bottom: 20px;
-  border: 3px solid #adb5bd;
+  border: 1px solid #adb5bd;
   border-radius: 10px;
 }
 .form-group label {
@@ -178,8 +189,8 @@
 }
 .form-btn-next {
   position: absolute;
-  top: 640px;
-  right: 18px;
+  top: 720px;
+  right: 110px;
   padding: 15px 40px;
   background-color: #000;
   color: white;
@@ -191,8 +202,8 @@
 
 .form-btn-back {
   position: absolute;
-  top: 640px;
-  right: 580px;
+  top: 720px;
+  right: 695px;
   padding: 15px 40px;
   background-color: #000;
   color: white;
@@ -203,35 +214,30 @@
 }
 
 .premise-type-step {
-  display: flex;
-  width: 80%;
-  max-width: 600px;
-  width: 100%;
+  /* background-color: #6c757d; */
+  width: 700px;
   height: 400px;
-  margin-left: 0px;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 50px;
+  margin-bottom: 50px;
 }
-
 .premise-type-step h2 {
   font-size: 28px;
   line-height: 1.5rem;
 }
 .premise-options {
+  flex: 1;
   display: inline-block;
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  /* width: 100%; */
+  gap: 40px;
 }
 
 #opt-btn {
+  flex: 1;
   display: inline-block;
   background-color: #f7f7f7;
-  padding: 10px;
-  width: 400px;
-  height: 50px;
   border: 1px solid #ccc;
   border-radius: 8px;
   text-align: center;
@@ -251,13 +257,28 @@
 }
 .address-form {
   /* background-color: #20c997; */
+  width: 700px;
+  height: 400px;
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
+  gap: 10px;
+  margin-bottom: 100px;
+  /* padding-top: 10px; */
 }
+
+.ct-cod-grp{
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.ct-cod-grp .form-group{
+  flex: 1;
+  }
 
 .form-add {
   width: 100%; 
-  /* background-color: #198754; */
   height: 40px;
   padding: 10px;
   margin-bottom: 20px;
@@ -272,7 +293,9 @@
 }
 
 .form-cons{
-  width: 100%; 
+  display: flex;
+  /* background-color: #198754; */
+  width: 700px; 
   /* background-color: #198754; */
   height: 40px;
   padding: 10px;
@@ -284,7 +307,7 @@
 }
 
 #date{
-  width: 100%; 
+  width:700;
   /* background-color: #198754; */
   height: 40px;
   padding: 10px;
@@ -296,8 +319,8 @@
 
 .form-btn-sub{
   position: absolute;
-  top: 640px;
-  right: 18px;
+  top:720px;
+  right: 120px;
   padding: 15px 40px;
   background-color: #000;
   color: white;
